Fixed contact list checkbox valign; hid contact stats for new/missing contact.

--- a/plugins/core/web-app/css/contact.css
+++ b/plugins/core/web-app/css/contact.css
@@ -12,11 +12,11 @@
 #body.contacts #list-head .group h1 { background-image:url("../images/icons/groups.png"); }
 #body.contacts #list-head .smartgroup h1 { background-image:url("../images/icons/smartgroups.png"); }
 
-#body.contacts #list li { padding:0 17px; display:table; }
+#body.contacts #list li { padding:7px 0 7px 24px; }
 #body.contacts #list li:hover { background-color:#e5eff3; }
 #body.contacts #list li.selected { background-color:#d8e8ef; }
-#body.contacts #list li > * { display:table-cell; vertical-align:middle; }
-#body.contacts #list li a { padding:7px; width:100%; }
+#body.contacts #list li a { padding-left:7px; padding-right:24px; }
+#body.contacts #list li input[type="checkbox"] { vertical-align:middle; }
 
 #body.contacts #detail { padding:37px; background-color:#d8e8ef; border-left:1px solid #9e9e9e; }
 #body.contacts #detail #multiple-contacts { display:none; }
